<resources>
    <string name="app_name">Bargain</string>
    <string name="logo">logo</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">sign up</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="password">password</string>
    <string name="phone">phone Number</string>
    <string name="address">address</string>
    <string name="email_address">email Address</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="have_account">Have Account? Sign In</string>
    <string name="welcome">Welcome !</string>
    <string name="big_text">Please complete the following fields correctly now that the more accurate the more you will be trusted</string>
    <string name="city">city</string>
    <string name="more">more</string>
    <string name="profile">profile</string>
    <string name="logout">logout</string>
    <string name="search">search</string>
    <string name="cart">cart</string>
    <string-array name="cities">
        <item>sers al layyana</item>
    </string-array>
    <string-array name="individual_types">
        <item>hand made product</item>
        <item>resell product</item>
        <item>home service</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="stores">stores</string>
    <string name="individuals">individuals</string>
    <string name="handMade">hand made</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="alert">alert</string>
    <string name="x">X</string>
    <string name="ok">OK</string>
    <string name="order_history">Order History</string>
    <string name="custom_order">Make Order</string>
    <string name="loading">loading ....</string>
    <string name="unauthorized">unAuthorized</string>
    <string name="null_field">this field is required</string>
    <string name="email_not_verified">Your Account Is Not Verified Yet </string>
    <string name="try_to_verify">Verify this email</string>
    <string name="got_to_email_app">Open Email</string>
    <string name="super_markets">Super Markets</string>
    <string name="restaurants">Food Restaurants</string>
    <string name="homeMade">Home Made</string>
    <string name="homeStore">Home Store</string>
    <string name="homeService">Home Service</string>
    <string name="vegetables_markets">Vegetables Markets</string>
    <string name="market_image">Market Image</string>
    <string name="supermarket_name">supermarket Name :</string>
    <string name="add_photo">Add photo</string>
    <string name="add">add</string>
    <string name="zero">0</string>
    <string name="move">move</string>
    <string name="product_name">product Name</string>
    <string name="price">99.99</string>
    <string name="add_sign">+</string>
    <string name="minus_sign">-</string>
    <string name="one">1</string>
    <string name="quantity">quantity</string>
    <string name="offer">offer</string>
    <string name="expand">expand</string>
    <string name="weight_unit">weight unit</string>
    <string name="total_price">Total Price :</string>
    <string name="continue_to_checkout">continue to checkout</string>
    <string name="productimage">productImage</string>
    <string name="be_the_first_to_review">be the first to review</string>
    <string name="long_press_on_the_product_for_more">long press on the product for more</string>
    <string name="add_image">add Image</string>
    <string name="what_is_in_the_package">what is in the package ?</string>
    <string name="price_string">price</string>
    <string name="order_what_you_want">Order What you Want</string>
    <string name="write_whatever_you_want">write Whatever you Want to order in the field below in most detailed form and we \'ll deliver it/them for you</string>
    <string name="order">write the Order here ..</string>
    <string name="order_now">order now</string>
    <string name="go_home">go home</string>
    <string name="costume_orders">Costume Orders</string>
    <string name="normal_orders">normal Orders</string>
    <string name="super_markets_discounts">super markets Discounts</string>
    <string name="home_products_on_sale">Home Products On Sale</string>
    <string name="update_product">update Product</string>
    <string name="remove_this_product">remove this product</string>

</resources>
