<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".ui.mainActivity.customOrder.CustomOrderFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:layout_marginStart="5dp"
        android:text="@string/order_what_you_want"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/big_text" />

    <TextView
        android:id="@+id/body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_margin="5dp"
        android:layout_marginVertical="5dp"
        android:text="@string/write_whatever_you_want"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/normal_text" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/body"
        android:layout_margin="5dp"
        app:cardCornerRadius="@dimen/card_radius">

        <EditText
            android:id="@+id/orderText"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="5dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/order"
            android:inputType="textMultiLine" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/orderBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card"
        android:layout_margin="5dp"
        android:text="@string/order_now" />

</RelativeLayout>