<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SplashActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:background="@drawable/circle_accent"
        android:contentDescription="@string/logo"
        android:paddingStart="35dp"
        android:paddingTop="30dp"
        android:paddingEnd="30dp"
        android:paddingBottom="40dp"

        android:src="@drawable/ic_remarketing" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signIn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:text="@string/sign_in" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/sign_up"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/hello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textAlignment="center"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:visibility="gone"

        />

</LinearLayout>