<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/dismiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/loading"
            android:layout_alignParentEnd="true"
            android:text="@string/x"
            android:textColor="@android:color/holo_red_light"
            android:textSize="@dimen/very_big_text"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true" />


        <TextView
            android:id="@+id/loadingState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loading"
            android:layout_margin="20dp"
            android:text="@string/loading"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/goHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loadingState"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:text="@string/go_home"
            android:visibility="gone" />


    </RelativeLayout>
</androidx.cardview.widget.CardView>