<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.editProductFragment.EditProductFragment">


    <androidx.cardview.widget.CardView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="@dimen/card_radius"
        app:cardElevation="1dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/productImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/add_image"
                android:scaleType="center"
                android:src="@drawable/ic_menu_camera" />

            <TextView
                android:id="@+id/addImageText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/productImage"
                android:background="@color/colorPrimaryLightTransparent"
                android:text="@string/add_image"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/big_text" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/productName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="7dp"
        android:layout_marginTop="7dp"
        android:hint="@string/product_name"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/unit"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="7dp"
        android:layout_marginTop="7dp"
        android:hint="@string/what_is_in_the_package"

        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="7dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/price"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"

            android:layout_marginEnd="3dp"
            android:layout_weight="1"
            android:hint="@string/price_string"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="3dp"

            android:layout_weight="1"
            android:popupBackground="@color/white"
            android:popupElevation="1dp"
            android:theme="@android:style/Theme.Holo.Light.DarkActionBar" />

    </LinearLayout>

    <Button
        android:id="@+id/updateBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="7dp"
        android:text="@string/update_product"
        android:textSize="@dimen/normal_text" />

    <Button
        android:id="@+id/removeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="7dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="@string/remove_this_product"
        android:textSize="@dimen/normal_text" />

</LinearLayout>