<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="@dimen/card_radius">

    <RelativeLayout
        android:id="@+id/body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="7dp"
        android:layout_marginVertical="5dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="5dp"
            android:contentDescription="@string/productimage"
            android:scaleType="center"
            android:src="@color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/linear"
            android:layout_toEndOf="@id/image"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_name"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/normal_text" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/small_text" />

            <TextView
                android:id="@+id/unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight_unit"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/small_text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="5dp"
            android:orientation="horizontal">


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_minus"
                app:backgroundTint="@color/colorAccent"
                app:fabCustomSize="25dp"
                app:tint="@color/white" />

            <EditText
                android:id="@+id/quantity"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:autofillHints="number"
                android:inputType="number"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/normal_text"

                tools:ignore="LabelFor" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_one"
                app:backgroundTint="@color/colorAccentDark"

                app:fabCustomSize="25dp"
                app:tint="@color/white" />

        </LinearLayout>

    </RelativeLayout>


</androidx.cardview.widget.CardView>